public static class GameConstants
{
    public const string playerTag = "Player";
    public const string gameControllerTag = "GameController";
    public const string AnimeIdle = "Idle";
    public const string AnimeListen = "Listen";
    public const string AnimeTalk = "Talk";
    public const string MicrophoneDeviceName = null;
    public const string LANG_CODE = "en_US";

    public const int IdleRecordingLength = 1;
    public const int RecordingLength = 5;

    public const int RecordingFrequency = 44100;

    public const int SampleDataLength = 1024;

    public const float SoundThreshold = 0.025f;


}
